service-discovery/discovery-server-gitops/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha256
    nginx.ingress.kubernetes.io/session-cookie-name: route
  name: discovery-server-ing
spec:
  ingressClassName: nginx
  rules:
  - host: dev-inje-msa-demo.cone-chain.com
    http:
      paths:
      - backend:
          service:
            name: discovery-server-svc
            port:
              number: 8761
        path: /discovery
        pathType: Prefix
  tls:
  - hosts:
    - dev-inje-msa-demo.cone-chain.com
    secretName: secret-tls
